# PostureGuard

./: CMakeLists.txt  README.md
PostureGuard/: README.md
PostureGuard/include/: AlertSystem.h
PostureGuard/src/: AlertSystem.cpp  DistanceCalculator.cpp
include/: DistanceCalculator.h  FaceDetector.h
src/: FaceDetector.cpp  main.cpp
